[package]
name = "tavern_card_tools"
version = "0.1.3"
edition = "2021"
authors = ["Barafu Albino <barafu_devel@albino.email>"]

[profile.release]
strip = true #Remove extra symbols
opt-level = "s" #Optimize for size
lto = true #Enable linker optimizations
codegen-units=1 #Maximise optimizations

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
bytes = { version = "1.6.0", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.9", features = ["derive", "unicode"] }
env_logger = "0.11.3"
image = "0.25.1"
log = { version = "0.4.22", features = ["serde"] }
png = "0.17.13"
reqwest = { version = "0.12.5", features = ["blocking"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_path_to_error = "0.1.16"
soup = "0.5.1"
test-context = "0.3.0"
